--- a/styles.css
+++ b/styles.css
@@ -6,32 +6,155 @@ h1 {
 }
 body {
   color: rgb(0, 0, 0);
-  font: 70;
+  font: 80;
   font-family: monospace;
   padding: 0px;
   margin: 0px;
 }
 header {
-    background-color: grey;
+    background-color: #DBC9E9;
     padding: 5px;
+    width: 100%;
+    height: 50px
 }
 section {
     position: relative;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     margin: 20px;
     flex-direction: row;
     display: flex;
     flex-direction: row;
 }
-.submit {
-  place-self: center;
-  color: blue;
-  width: 30px;
-  text-align: center;
-  position: sticky;
+/*form {
+  display: inline-block;
+  height: 30px;
+  width: 100%;
+  align-content: center;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 2px black;
+  border-radius: 4px;
+} */
+
+.textarea {
+  width: 100%;
+  height: 100px;
+  margin-top: 10px;
+  padding: 12px 20px;
+  text-overflow: initial;
+  box-sizing: border-box;
+  border: 2px solid #DBC9E9;
+  border-radius: 2px;
+  background-color: #f8f8f8;
+  resize: none;
+  word-wrap: break-word;
+  word-break: break-all;
+  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: visible;
 }
+
+.submit {
+  width: 100px;
+  height: 30px;
+  margin-top: 3px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  background-color: #DBC9E9;
+  color: black;
+  font-weight: bold;
+  resize: none;
+}
+
 div {
-    background-color: rgb(209, 37, 94);
+  background-color: pink;
+  align-items: center;
+}
+
+/* colors
+Pink FDC9C9
+blue C9EFCB
+purple DBC9E9
+orange FFE7C9
+green C9F4FB
+yellow FFFAC9 */
+
+
+div.test {
+  width: 200px;
+  height: 200px;
+  background-color: white;
+  display: inline-block;
+  margin: auto;
+}
+#top {
+  width: 200px;
+  height:160px;
+  background-color: #C9EFCB;
+  text-align: center;
+  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: visible;
+}
+#right {
+  float: right;
+  background-color: #FDC9C9;
+  width: 50px;
+  padding: 3px;
+  text-align-last: center;
+}
+#left {
+  float: left;
+  background-color:#FFFAC9;
+  width: 50px;
+  padding: 3px;
+  text-align-last: center;
+}
+#center {
+  float: center;
+  background-color: #DBC9E9;
+  align-content: center;
+  width: auto;
+  padding: 3px;
+  text-align-last: center;
+}
+
+.post-page {
+  margin: 10%;
+  height: auto;
+  text-align: center;
+  margin-top: 20px;
+  align-self: center;
+  align-content: center;
+}
+#right-pp {
+  float: right;
+  background-color: #FDC9C9;
+  width: auto;
+  padding: 3px;
+  text-align-last: center;
+}
+
+#left-pp {
+  float: left;
+  background-color:#FFFAC9;
+  width: 50px;
+  padding: 3px;
+  text-align-last: center;
+}
+
+#center-pp {
+  float: center;
+  background-color: #DBC9E9;
+  align-content: center;
+  width: auto;
+  padding: 3px;
+  text-align-last: center;
+}
+
+div.story {
+    background-color: rgb(174, 224, 222);
     display: inline-block;
     width: 150px;
     height: 150px;
@@ -42,6 +165,34 @@ div {
     overflow-x: hidden;
     overflow-y: visible;
 }
+ul {
+  margin: auto;
+  list-style-type: none;
+  text-decoration: none;
+  display: table ;
+  width: 100%;
+  text-align: center;
+}
+button {
+  background-color: white;
+  color: black;
+  cursor: pointer;}
+  
+
+
+/* #sidenav {
+  height: 100%;
+  width: 160px;
+  position: absolute;
+  display: inline-block;
+  z-index: 1;
+  top: 0;
+  left: -20px;
+  background-color: rgb(186, 240, 237);
+  overflow-x: hidden;
+  padding-top: 20px;
+}*/
+
 p.text {
   position: sticky;
   width: 500px;
@@ -58,7 +209,7 @@ p.submit {
 }
 
 div.container {
-  color: antiquewhite;
+  color: rgb(215, 239, 250);
   width: 500px;
   place-self: center;
   height: auto;
@@ -67,21 +218,43 @@ div.container {
   margin: auto;
   background-color: blueviolet;
 }
-ul {
-  margin: auto;
-  padding: auto;
-  list-style-type: none;
-  text-decoration: none;
-}
+
 li:hover{
   text-decoration: underline;
-  background-color: blanchedalmond;
+  background-color:#C9EFCB;
 }
 
 li {
+  padding: 5px;
+  margin: 5px;
+  margin-left: 10px;
   display: inline-block;
-  padding: 10px;
+
 }
-li:first-child {
-  margin-left: 0px;
+aside {
+  display: flexbox;
+  flex-direction: column;
+  float: right;
+  text-align: center;
+  width: 200px;
 }
+
+ul.settings {
+  display: flexbox;
+  flex-direction: column;
+}
+
+.profile {
+  height: 50px;
+  width: 50px;
+  align-content: center;
+  float: center;
+}
+dialog {
+  z-index: 1;
+  box-sizing: border-box;
+  border: 2px solid #DBC9E9;
+  border-radius: 2px;
+  background-color: #f8f8f8;
+  text-align: center;
+  }
